--- a/WI Zips bigquery.ipynb
+++ b/WI Zips bigquery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0b90da41-8837-47c8-ba1e-4546d384547f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "d03a3b23-312d-4d95-908c-b4b613064360",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_32088\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -52,47 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bbeb2f90-63a9-4007-bb50-b561bbf7e254",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_32088\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
-      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      name  median_home_value\n",
-      "0    53031                0.0\n",
-      "1    53127                0.0\n",
-      "2    54978                0.0\n",
-      "3    53939              122.3\n",
-      "4    53942              122.5\n",
-      "..     ...                ...\n",
-      "298  53018              450.1\n",
-      "299  53562              468.8\n",
-      "300  53058              474.6\n",
-      "301  53097              500.0\n",
-      "302  53125              561.7\n",
-      "\n",
-      "[303 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "51e43099-518b-4753-a3f2-6b72ed7a78e1",
    "metadata": {},
    "outputs": [
@@ -100,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_32088\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -122,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "4b084c47-1af5-4103-903b-8f0bf6794ca2",
    "metadata": {},
    "outputs": [
@@ -130,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_32088\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -147,6 +107,46 @@
    ],
    "source": [
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "08db9c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\3233348188.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      name  median_home_value\n",
+      "0    53176                0.0\n",
+      "1    54926               64.3\n",
+      "2    54525              102.7\n",
+      "3    54458              112.5\n",
+      "4    54865              176.8\n",
+      "..     ...                ...\n",
+      "140  53058              474.6\n",
+      "141  53097              500.0\n",
+      "142  53125              561.7\n",
+      "143  53726              586.6\n",
+      "144  54545              635.2\n",
+      "\n",
+      "[145 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
   }
