--- a/WI Zips bigquery.ipynb
+++ b/WI Zips bigquery.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -90,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "08db9c4c",
    "metadata": {},
    "outputs": [
@@ -120,8 +120,69 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_31232\\3233348188.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
-      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\2433312933.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 AND owner_occupied < 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     name  median_home_value\n",
+      "0   54481              178.0\n",
+      "1   54911              182.6\n",
+      "2   53212              187.8\n",
+      "3   54301              193.7\n",
+      "4   53818              199.4\n",
+      "5   54601              201.7\n",
+      "6   53207              206.2\n",
+      "7   54751              219.4\n",
+      "8   54720              222.0\n",
+      "9   54467              223.2\n",
+      "10  53228              239.4\n",
+      "11  53713              241.0\n",
+      "12  54701              242.6\n",
+      "13  53714              251.8\n",
+      "14  53186              256.8\n",
+      "15  53704              268.4\n",
+      "16  53130              275.3\n",
+      "17  53154              282.5\n",
+      "18  53226              286.0\n",
+      "19  53202              287.1\n",
+      "20  53213              298.6\n",
+      "21  54155              304.7\n",
+      "22  53718              309.6\n",
+      "23  53719              337.2\n",
+      "24  53598              356.9\n",
+      "25  53717              366.0\n",
+      "26  53711              369.3\n",
+      "27  53211              391.7\n",
+      "28  53715              410.7\n",
+      "29  53203              412.8\n",
+      "30  53705              427.4\n",
+      "31  53703              461.6\n",
+      "32  53562              468.8\n",
+      "33  53726              586.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 AND owner_occupied < 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "44b41559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\2103788377.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
     {
@@ -129,24 +190,24 @@
      "output_type": "stream",
      "text": [
       "      name  median_home_value\n",
-      "0    53176                0.0\n",
-      "1    54926               64.3\n",
-      "2    54525              102.7\n",
-      "3    54458              112.5\n",
-      "4    54865              176.8\n",
+      "0    53127                0.0\n",
+      "1    54978                0.0\n",
+      "2    53099                0.0\n",
+      "3    53192                0.0\n",
+      "4    53584                0.0\n",
       "..     ...                ...\n",
-      "140  53058              474.6\n",
-      "141  53097              500.0\n",
-      "142  53125              561.7\n",
-      "143  53726              586.6\n",
-      "144  54545              635.2\n",
+      "559  53036              333.6\n",
+      "560  53078              334.7\n",
+      "561  53529              345.6\n",
+      "562  53561              370.6\n",
+      "563  53069              403.3\n",
       "\n",
-      "[145 rows x 2 columns]\n"
+      "[564 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
+    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
   }
