--- a/WI Zips bigquery.ipynb
+++ b/WI Zips bigquery.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -90,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "08db9c4c",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\2433312933.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\2433312933.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 AND owner_occupied < 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "44b41559",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_26172\\2103788377.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\2103788377.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -208,6 +208,67 @@
    ],
    "source": [
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a694faa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\3915177962.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 50 AND owner_occupied > 50 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     name  median_home_value\n",
+      "0   53176                0.0\n",
+      "1   54827              240.8\n",
+      "2   53226              286.0\n",
+      "3   53716              296.3\n",
+      "4   53213              298.6\n",
+      "5   53718              309.6\n",
+      "6   54169              309.9\n",
+      "7   53590              330.1\n",
+      "8   54210              332.6\n",
+      "9   53044              335.4\n",
+      "10  53719              337.2\n",
+      "11  53558              357.9\n",
+      "12  53183              360.6\n",
+      "13  53717              366.0\n",
+      "14  53012              366.3\n",
+      "15  53005              368.3\n",
+      "16  53711              369.3\n",
+      "17  53072              380.1\n",
+      "18  53217              406.3\n",
+      "19  53045              410.4\n",
+      "20  53017              413.3\n",
+      "21  53092              416.3\n",
+      "22  53597              428.7\n",
+      "23  53122              434.3\n",
+      "24  54212              438.2\n",
+      "25  53593              439.1\n",
+      "26  54082              443.2\n",
+      "27  53018              450.1\n",
+      "28  54211              457.3\n",
+      "29  53562              468.8\n",
+      "30  53058              474.6\n",
+      "31  53097              500.0\n",
+      "32  53125              561.7\n",
+      "33  54545              635.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 50 AND owner_occupied > 50 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
   }
