--- a/WI Zips bigquery.ipynb
+++ b/WI Zips bigquery.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_15860\\4189596108.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -46,6 +46,7 @@
     }
    ],
    "source": [
+    "# Let's say we want to find a zip code where most people are middle income\n",
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE median_household_income > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
@@ -60,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_15860\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -76,36 +77,7 @@
     }
    ],
    "source": [
-    "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4b084c47-1af5-4103-903b-8f0bf6794ca2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\1361745401.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
-      "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    name  median_home_value\n",
-      "0  53705              427.4\n",
-      "1  54211              457.3\n",
-      "2  53726              586.6\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Let's say we want to find a zip code where almost everyone has a college degree\n",
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 75 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
@@ -120,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\2433312933.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_15860\\2433312933.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 AND owner_occupied < 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -167,6 +139,7 @@
     }
    ],
    "source": [
+    "# Let's say we want to find a zip code with a balence of renters and homeowners\n",
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 33 AND owner_occupied < 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
@@ -181,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\2103788377.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_15860\\2103788377.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -207,6 +180,7 @@
     }
    ],
    "source": [
+    "# Let's say we want to find a zip code with a balence of college educated and non college educated people\n",
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher < 33 AND owner_occupied > 66 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
@@ -221,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_21028\\3915177962.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
+      "C:\\Users\\Geord\\AppData\\Local\\Temp\\ipykernel_15860\\3915177962.py:1: FutureWarning: read_gbq is deprecated and will be removed in a future version. Please use pandas_gbq.read_gbq instead: https://pandas-gbq.readthedocs.io/en/latest/api.html#pandas_gbq.read_gbq\n",
       "  df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 50 AND owner_occupied > 50 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n"
      ]
     },
@@ -268,6 +242,7 @@
     }
    ],
    "source": [
+    "# Let's say we want to find a zip code where most people are educated and own their homes\n",
     "df = pandas_gbq.read_gbq(\"SELECT name, median_home_value FROM ZipCodes.Wisconsin WHERE bachelors_or_higher > 50 AND owner_occupied > 50 ORDER BY median_home_value\",project_id=\"plucky-bulwark-424923-q8\")\n",
     "print(df)"
    ]
